--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <img src="./img/familia.jpeg" class="card-img-top" alt="Imagem da Postagem">
                         <div class="card-body">
                             <figcaption><h5 class="card-title">Aniversário de 10 anos do Samuel.</h5>
-                            <p class="card-text">Eu, Henrique, minha esposa Tatina, meu filho mais velho Gabriel(20) e o Samuka(10). 
+                            <p class="card-text">Eu, Henrique, minha esposa Tatiana, meu filho mais velho Gabriel(20) e o Samuka(10). 
                                 </p></figcaption>
                         </div>
                     </div>
