--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
                         <li><b>Gamer de Coração:</b>
                             Entre uma pedalada e outra, mergulho no universo dos games. Seja explorando mundos virtuais, competindo online ou desfrutando de narrativas envolventes, os jogos são minhas válvulas de escape e diversão.</li>
                         <li><b>Família em Primeiro Lugar:</b>
-                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio e alegria aos meus dias. Criar memórias especiais com eles é minha prioridade.
-                        Entusiasmo Esportivo: Assim como o aficionado pela Fórmula 1 e o fanático pelo Vasco da Gama no exemplo, sou um apaixonado por esportes. Acompanhando de perto as corridas de mountain bike, vibrando com cada desafio e conquista.
-                        Amor pela Tecnologia: Geek por natureza, mantenha-me atualizado com as últimas novidades em tecnologia. Seja um novo gadget ou uma inovação revolucionária, meu interesse vai além da superfície.
-                        Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.</li>
+                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio e alegria aos meus dias. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.</li>
                     </ul>
                         </p>
                 </div>
