--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <li><b>Gamer de Coração:</b>
                             Entre uma pedalada e outra, mergulho no universo dos games. Seja explorando mundos virtuais, competindo online ou desfrutando de narrativas envolventes, os jogos são minhas válvulas de escape e diversão.</li>
                         <li><b>Família em Primeiro Lugar:</b>
-                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio e alegria aos meus dias. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.</li>
+                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio, alegria aos meus dias, histórias e, é claro, uma boa comida. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.</li>
+                        
                     </ul>
                         </p>
                 </div>
