--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <div class="card-body">
                     <h2>Informações Pessoais</h2>
-                    <p>Sou um entusiasta da vida, casado e pai de dois filhos incríveis, um jovem de 20 anos e um garoto de 10 anos. Minha vida é uma mistura vibrante de responsabilidades familiares e paixões pessoais que moldam meu dia a dia.<br/>
+                    <p>Sou um entusiasta da vida, casado e pai de dois filhos incríveis, um jovem de 20 anos e um garoto de 10 anos. Minha vida é uma mistura vibrante de responsabilidades familiares e paixões pessoais que moldam meu dia a dia. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.<br/>
                     <ul>
                         <li><h3>Hobbies e interesses:</h3>
                         <b>Aventuras Sobre Duas Rodas: Seja de Bike ou Moto.</b> 
@@ -46,7 +46,7 @@
                         <li><b>Gamer de Coração:</b>
                             Entre uma pedalada e outra, mergulho no universo dos games. Seja explorando mundos virtuais, competindo online ou desfrutando de narrativas envolventes, os jogos são minhas válvulas de escape e diversão.</li>
                         <li><b>Família em Primeiro Lugar:</b>
-                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio, alegria aos meus dias, histórias e, é claro, uma boa comida. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.</li>
+                        Minha esposa e filhos são a base da minha vida, trazendo equilíbrio, alegria aos meus dias, histórias e, é claro, uma boa comida. </li>
                         
                     </ul>
                         </p>
