--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="card">
                 <div class="card-body">
                     <h2>Informações Pessoais</h2>
-                    <p>Sou um entusiasta da vida, casado e pai de dois filhos incríveis, um jovem de 20 anos e um garoto de 10 anos. Minha vida é uma mistura vibrante de responsabilidades familiares e paixões pessoais que moldam meu dia a dia. Meu perfil é um mosaico de interesses diversos, combinando ação ao ar livre, momentos em família, diversão digital e uma pitada de cultura cinematográfica. Essa combinação única reflete a minha abordagem multifacetada à vida, onde cada paixão contribui para a rica tapeçaria da minha jornada.<br/>
+                    <p>Sou um entusiasta da vida, casado e pai de dois filhos incríveis, um jovem de 20 anos e um garoto de 10 anos. Minha rotina é uma mistura dinâmica de responsabilidades familiares e paixões pessoais que permeiam meu cotidiano. Meu perfil se revela como um conjunto diversificado de interesses, incluindo atividades ao ar livre, momentos em família, entretenimento digital e uma pincelada de aplicação artística. Essa combinação singular reflete minha abordagem versátil à vida, onde cada paixão contribui para o colorido tecido da minha jornada.<br/>
+                        
                     <ul>
                         <li><h3>Hobbies e interesses:</h3>
                         <b>Aventuras Sobre Duas Rodas: Seja de Bike ou Moto.</b> 
